# unittest-patterns

./: .coveragerc  .editorconfig  .mypy.ini  LICENSE  README.md  noxfile.py  pyproject.toml  ruff.toml
src/unittest_patterns/: __init__.py  spies.py
